fix whitespace di ipad

--- a/themes/rianascloset/css/global.css
+++ b/themes/rianascloset/css/global.css
@@ -269,10 +269,14 @@ img.logo {
 }
 #header_right {
 	float: left;
-	margin-bottom: 15px;
 	width: 505px;
+	height: 1px;
+	position: relative;
+	/*
+	margin-bottom: 15px;
 	text-align: right;
 	margin-top: 20px;
+	*/
 }
 #left_column, #center_column, #right_column { float: left }
 #left_column {
@@ -1716,8 +1720,6 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 .block_contentlangcurr{
 	float: right;
 	position: relative;
-	margin-left: 100px;
-	margin-top: -10px;
 }
 
 .block_contentcategories{
@@ -1725,8 +1727,8 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 }
 
 #search_block_top{
-	margin-left: 60px;
-	margin-top: 63px;
+	left: 60px;
+	top: 90px;
 	position: absolute;
 }
 
@@ -1751,16 +1753,12 @@ div.star_hover a, div.star a:hover { background-position: 0 -32px }
 #setCurrency, #setLanguage{
 	height: 23px;
 	width: 140px;
-	margin-left: 10px;
-	background: url(../img/arrow-dropdown.png) no-repeat right #fff;
-	margin-top: 40px;
+	margin-top: 30px;
 	float:left;
 }
 
 #setCurrency select, #setLanguage select{
-	margin-right: 120px;
-	margin-left: 0px;
-	width: 140px;
+	width: 120px;
 	border: 1px solid #BDC2C9;
 	color: #000;
 }
@@ -2175,11 +2173,12 @@ a.introindexlink:hover{ background-color: rgba(219, 215, 214, 0.2); color: rgba(
 }
 
 #header_user_info, #header_nav{
-	margin-right: 20px;
+	padding-right: 20px;
 }
 #header_user_info{
-	float: right;
-	margin-top: -20px;
+	text-align: right;
+	padding-top: 8px;
+	margin-bottom: 8px;
 }
 
 .emailnews{}
